Fix height overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -551,9 +551,8 @@ header h1 {
 }
 
 #home .wheel-box {
-    margin-top: 4rem;
     position: relative;
-    max-height: 70vh;
+    max-height: 69vh;
 
     svg#arrow-down {
         width: 40px;
